--- a/settings.properties
+++ b/settings.properties
@@ -16,19 +16,16 @@ NormalTime = 7.7
 NO_CALCULATION_ACTIVITIES = "Lunch", "ownExpense"
 
 #project file name
+ProjectFileName = test/data/prj.txt
+ProjectFileEncoding = UTF-8
+LogFileName = test/data/log.txt
+LogFileEncoding = UTF-8
+UsersFileName = test/data/users.txt
+UsersFileNameEncoding = UTF-8
 
-#ProjectFileName = data/prj.txt
-#ProjectFileEncoding = UTF-8
-#LogFileName = data/log.txt
-#LogFileEncoding = UTF-8
-
-#ProjectFileName = data/prj.txt
-#ProjectFileEncoding = UTF-8
-#LogFileName = data/log.txt
-#LogFileEncoding = UTF-8
-
-
-LogFileName = /C:/ws/glassfish/glassfish/domains/localhost/docroot/log.txt
-LogFileEncoding = Cp1252
-ProjectFileName = /C:/ws/glassfish/glassfish/domains/localhost/docroot/prj.txt
-ProjectFileEncoding = Cp1252
+#LogFileName = /C:/ws/glassfish/glassfish/domains/localhost/docroot/log.txt
+#LogFileEncoding = Cp1252
+#ProjectFileName = /C:/ws/glassfish/glassfish/domains/localhost/docroot/prj.txt
+#rojectFileEncoding = Cp1252
+#UsersFileName = /C:/ws/glassfish/glassfish/domains/localhost/docroot/users.txt
+#UsersFileNameEncoding = Cp1252
