FileStorage prepared for multiuser functionality

--- a/settings.properties
+++ b/settings.properties
@@ -16,11 +16,12 @@ NormalTime = 7.7
 NO_CALCULATION_ACTIVITIES = "Lunch", "ownExpense"
 
 #project file name
-ProjectFileName = test/data/prj.txt
+FileStorageBaseFilePath = test/filestorage/data
+ProjectFileName = prj.txt
 ProjectFileEncoding = UTF-8
-LogFileName = test/data/log.txt
+LogFileName = log.txt
 LogFileEncoding = UTF-8
-UsersFileName = test/data/users.txt
+UsersFileName = users.json
 UsersFileNameEncoding = UTF-8
 
 #LogFileName = /C:/ws/glassfish/glassfish/domains/localhost/docroot/log.txt
