added ActiveUserStorageProperties trait to show the inactiveTimeoutDelay setting for a ActiveUserStorage implementation, and this value is now collected from settings.properties

--- a/settings.properties
+++ b/settings.properties
@@ -30,3 +30,6 @@ UsersFileNameEncoding = UTF-8
 #rojectFileEncoding = Cp1252
 #UsersFileName = /C:/ws/glassfish/glassfish/domains/localhost/docroot/users.txt
 #UsersFileNameEncoding = Cp1252
+
+#15 * 60 * 1000 
+ActiveUser_InactivityTimeoutDelay = 900000
