Authentication management continued

--- a/settings.properties
+++ b/settings.properties
@@ -33,3 +33,4 @@ UsersFileNameEncoding = UTF-8
 
 #15 * 60 * 1000 
 ActiveUser_InactivityTimeoutDelay = 900000
+Session_InactivityTimeoutDelay = 900000
